--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="your_hint_text_color">#808080</color>
     <color name="primary_dark">#0057B4</color>
     <color name="accent">#D81B60</color>
-    <color name="button_background">#6DA8D5</color>
+    <color name="button_background">#A97272</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
