--- a/app/src/main/res/layout/fragment_login_fregment.xml
+++ b/app/src/main/res/layout/fragment_login_fregment.xml
@@ -7,17 +7,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@color/background_light"
-    tools:context=".Fregments.LoginFregment">
+    tools:context=".Fregments.LoginFregment"
+    android:background="@color/background_beige">
 
-    <!-- Title -->
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="287dp"
         android:src="@drawable/logo" />
 
-    <!-- Username Input -->
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         app:boxBackgroundMode="outline"
-        app:boxStrokeColor="@color/primary">
+        app:boxStrokeColor="@color/secondary">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputPass"
@@ -55,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"
-        android:backgroundTint="@color/primary"
+        android:backgroundTint="@color/secondary"
         android:textColor="@color/white"
         android:layout_marginBottom="16dp" />
 
@@ -65,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Register"
-        android:backgroundTint="@color/secondary"
+        android:backgroundTint="@color/primary"
         android:textColor="@color/white" />
 
 </LinearLayout>
