--- a/app/src/main/res/layout/fragment_reg_fregment.xml
+++ b/app/src/main/res/layout/fragment_reg_fregment.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingTop="16dp"
     android:paddingBottom="16dp"
-    android:background="@color/background_light"
+    android:background="@color/background_beige"
     tools:context=".Fregments.RegFregment">
 
     <TextView
