--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#7A041B</color>
-    <color name="secondary">#DE0422</color>
-    <color name="background_light">#FFFFFF</color>
-    <color name="your_hint_text_color">#808080</color>
-    <color name="primary_dark">#0057B4</color>
-    <color name="accent">#D81B60</color>
-    <color name="button_background">#A97272</color>
-    <color name="black">#FF000000</color>
+    <color name="primary">#213555</color>
+    <color name="background_beige">#F5EFE7</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="secondary">#3E5879</color>
 </resources>
