--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".Fregments.LoginFregment"
+    tools:context=".Fragments.LoginFragment"
     android:background="@color/background_beige">
 
     <ImageView
