--- a/app/src/main/res/layout/reg_fragment.xml
+++ b/app/src/main/res/layout/reg_fragment.xml
@@ -8,7 +8,7 @@
     android:paddingTop="16dp"
     android:paddingBottom="16dp"
     android:background="@color/background_beige"
-    tools:context=".Fregments.RegFregment">
+    tools:context=".Fragments.RegFragment">
 
     <TextView
         android:id="@+id/reg"
