--- a/app/src/main/res/layout/fragment_client_home.xml
+++ b/app/src/main/res/layout/fragment_client_home.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.ClientHomeFragment">
+    android:background="@color/background_beige"
+tools:context=".Fragments.ClientHomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment"
+        />
 
 </FrameLayout>
