--- a/app/src/main/res/layout/appointment_item.xml
+++ b/app/src/main/res/layout/appointment_item.xml
@@ -3,19 +3,45 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/appointmentTime"
+        android:id="@+id/tvAppointmentId"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Appointment Time"
-        android:textSize="16sp" />
+        android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/customerName"
+        android:id="@+id/tvEmail"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Customer Name"
-        android:textSize="14sp" />
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvService"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvStartTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvEndTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvDuration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
