--- a/app/src/main/res/layout/fragment_admin_home.xml
+++ b/app/src/main/res/layout/fragment_admin_home.xml
@@ -19,7 +19,7 @@
     <ListView
         android:id="@+id/appointmentsListView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="595dp"
         android:layout_weight="1"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="1dp" />
@@ -33,4 +33,11 @@
         android:text="No appointments for today."
         android:textColor="@android:color/darker_gray"
         android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="schedule mangement "
+        android:onClick="scheduleMangement"/>
 </LinearLayout>
