--- a/app/src/main/res/layout/reg_fragment.xml
+++ b/app/src/main/res/layout/reg_fragment.xml
@@ -45,7 +45,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="email"
-            android:inputType="text" />
+            android:inputType="textEmailAddress" />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
