--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -45,7 +45,16 @@
         tools:layout="@layout/fragment_client_home" />
     <fragment
         android:id="@+id/scheduleManagement"
-        android:name="com.example.hairqueue.ScheduleManagement"
+        android:name="com.example.hairqueue.Fragments.ScheduleManagement"
         android:label="fragment_schedule_management"
-        tools:layout="@layout/fragment_schedule_management" />
+        tools:layout="@layout/fragment_schedule_management" >
+        <action
+            android:id="@+id/action_scheduleManagement_to_adminFragmentConstraints"
+            app:destination="@id/adminFragmentConstraints" />
+    </fragment>
+    <fragment
+        android:id="@+id/adminFragmentConstraints"
+        android:name="com.example.hairqueue.Fragments.AdminFragmentConstraints"
+        android:label="fragment_admin_constraints"
+        tools:layout="@layout/fragment_admin_constraints" />
 </navigation>
