--- a/app/src/main/res/layout/fragment_admin_constraints.xml
+++ b/app/src/main/res/layout/fragment_admin_constraints.xml
@@ -1,4 +1,3 @@
-<!-- fragment_admin_constraints.xml -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,6 +8,7 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <!-- Selected Date -->
         <TextView
             android:id="@+id/selectedDateTextView"
             android:layout_width="wrap_content"
@@ -17,6 +17,7 @@
             android:textStyle="bold"
             android:layout_marginBottom="16dp" />
 
+        <!-- Radio Group for Day Type Selection -->
         <RadioGroup
             android:id="@+id/dayTypeRadioGroup"
             android:layout_width="match_parent"
@@ -42,6 +43,7 @@
                 android:text="Sick Day" />
         </RadioGroup>
 
+        <!-- Work Day Time Selection Layout -->
         <LinearLayout
             android:id="@+id/workDayOptionsLayout"
             android:layout_width="match_parent"
@@ -50,67 +52,69 @@
             android:visibility="gone"
             android:paddingTop="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <!-- Start Hour and Minute -->
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Start Time:" />
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Start Hour:" />
-            <TimePicker
-                android:id="@+id/startHourPicker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:timePickerMode="spinner" />
+                android:orientation="horizontal">
+                <NumberPicker android:id="@+id/startHourPicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                <NumberPicker android:id="@+id/startMinutePicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+            </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
+            <!-- End Hour and Minute -->
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="End Time:" />
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="End Hour:" />
-            <TimePicker
-                android:id="@+id/endHourPicker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:timePickerMode="spinner" />
+                android:orientation="horizontal">
+                <NumberPicker android:id="@+id/endHourPicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                <NumberPicker android:id="@+id/endMinutePicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+            </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
+            <!-- Lunch Break Start -->
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Lunch Break Start:" />
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Lunch Break Start:" />
-            <TimePicker
-                android:id="@+id/lunchBreakStartPicker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:timePickerMode="spinner" />
+                android:orientation="horizontal">
+                <NumberPicker android:id="@+id/lunchBreakStartPicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                <NumberPicker android:id="@+id/lunchBreakStartMinutePicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+            </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
+            <!-- Lunch Break End -->
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Lunch Break End:" />
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Lunch Break End:" />
-            <TimePicker
-                android:id="@+id/lunchBreakEndPicker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:timePickerMode="spinner" />
+                android:orientation="horizontal">
+                <NumberPicker android:id="@+id/lunchBreakEndPicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                <NumberPicker android:id="@+id/lunchBreakEndMinutePicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+            </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
+            <!-- Constraint Start -->
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Constraint Start Time:" />
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Constraint Start Hour:" />
-            <TimePicker
-                android:id="@+id/constraintStartHourPicker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:timePickerMode="spinner" />
+                android:orientation="horizontal">
+                <NumberPicker android:id="@+id/constraintStartHourPicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                <NumberPicker android:id="@+id/constraintStartMinutePicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+            </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
+            <!-- Constraint End -->
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Constraint End Time:" />
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Constraint End Hour:" />
-            <TimePicker
-                android:id="@+id/constraintEndHourPicker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:timePickerMode="spinner" />
+                android:orientation="horizontal">
+                <NumberPicker android:id="@+id/constraintEndHourPicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                <NumberPicker android:id="@+id/constraintEndMinutePicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+            </LinearLayout>
+
         </LinearLayout>
 
+        <!-- Save Button -->
         <Button
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
