--- a/app/src/main/res/layout/fragment_admin_constraints.xml
+++ b/app/src/main/res/layout/fragment_admin_constraints.xml
@@ -120,6 +120,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Save"
+            android:visibility="gone"
             android:layout_marginTop="16dp" />
     </LinearLayout>
 </ScrollView>
