--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -56,5 +56,9 @@
         android:id="@+id/adminFragmentConstraints"
         android:name="com.example.hairqueue.Fragments.AdminConstraintsFragment"
         android:label="fragment_admin_constraints"
-        tools:layout="@layout/fragment_admin_constraints" />
+        tools:layout="@layout/fragment_admin_constraints" >
+        <action
+            android:id="@+id/action_adminFragmentConstraints_to_adminHomeFragment"
+            app:destination="@id/adminHomeFragment" />
+    </fragment>
 </navigation>
