--- a/app/src/main/res/layout/custom_alert_dialog.xml
+++ b/app/src/main/res/layout/custom_alert_dialog.xml
@@ -5,35 +5,72 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@drawable/dialog_background"
-    android:elevation="4dp">
+    android:elevation="4dp"
+    android:clipToOutline="true">
 
-    <TextView
-        android:id="@+id/alertTitle"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="Title"
-        android:textColor="@color/primary"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:gravity="center" />
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginBottom="6dp">
 
-    <ImageView
-        android:id="@+id/alertIcon"
-        android:layout_width="90dp"
-        android:layout_height="82dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="8dp"
-        android:src="@drawable/ic_alert_icon" />
+        <ImageView
+            android:id="@+id/alertIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/ic_alert_icon" />
+
+        <!-- כותרת במרכז -->
+        <TextView
+            android:id="@+id/alertTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="title"
+            android:textColor="@color/primary"
+            android:textSize="18sp"
+            android:textStyle="bold"
+           android:gravity="center" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/alertMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="6dp"
         android:text="Message"
         android:textColor="@color/secondary"
-        android:textSize="16sp"
+        android:textSize="14sp"/>
+
+    <!-- כפתורים -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:gravity="center"
-        android:padding="8dp"/>
+        android:layout_marginTop="8dp">
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="6dp"
+            android:backgroundTint="@color/secondary"
+            android:text="Cancel"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"/>
+
+        <Button
+            android:id="@+id/btnConfirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/primary"
+            android:text="Confirm"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"/>
+    </LinearLayout>
 
 </LinearLayout>
