new buttons- avaliable appoiments, occupied appoiments, show constrain

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -51,6 +51,12 @@
         <action
             android:id="@+id/action_scheduleManagement_to_adminFragmentConstraints"
             app:destination="@id/adminFragmentConstraints" />
+        <action
+            android:id="@+id/action_scheduleManagement_to_availableAppointmentsFragment"
+            app:destination="@id/availableAppointmentsFragment" />
+        <action
+            android:id="@+id/action_scheduleManagement_to_occupiedAppointmentsFragment"
+            app:destination="@id/occupiedAppointmentsFragment" />
     </fragment>
     <fragment
         android:id="@+id/adminFragmentConstraints"
@@ -61,4 +67,14 @@
             android:id="@+id/action_adminFragmentConstraints_to_adminHomeFragment"
             app:destination="@id/adminHomeFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/availableAppointmentsFragment"
+        android:name="com.example.hairqueue.Fragments.availableAppointmentsFragment"
+        android:label="fragment_available_appointments"
+        tools:layout="@layout/fragment_available_appointments" />
+    <fragment
+        android:id="@+id/occupiedAppointmentsFragment"
+        android:name="com.example.hairqueue.Fragments.occupiedAppointmentsFragment"
+        android:label="fragment_occupied_appointments"
+        tools:layout="@layout/fragment_occupied_appointments" />
 </navigation>
