updated client appointment

--- a/app/src/main/res/layout/fragment_schedule_management.xml
+++ b/app/src/main/res/layout/fragment_schedule_management.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <!-- Calendar in a CardView for a modern look -->
+        <!-- Calendar in a CardView -->
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
