--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -37,6 +37,12 @@
         <action
             android:id="@+id/action_adminHomeFragment_to_scheduleManagement"
             app:destination="@id/scheduleManagement" />
+        <action
+            android:id="@+id/action_adminHomeFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_adminHomeFragment_to_adminProfileFragment"
+            app:destination="@id/adminProfileFragment" />
     </fragment>
     <fragment
         android:id="@+id/clientHomeFragment"
@@ -108,6 +114,15 @@
         tools:layout="@layout/activity_profile" >
         <action
             android:id="@+id/action_activityProfileFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/adminProfileFragment"
+        android:name="com.example.hairqueue.Fragments.AdminProfileFragment"
+        android:label="fragment_admin_profile"
+        tools:layout="@layout/fragment_admin_profile" >
+        <action
+            android:id="@+id/action_adminProfileFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
 
