--- a/app/src/main/res/layout/fragment_client_date_picker.xml
+++ b/app/src/main/res/layout/fragment_client_date_picker.xml
@@ -48,7 +48,8 @@
                     android:text="Beard trim"
                     android:textColor="@color/radio_text_color"
                     android:textSize="16sp"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:layout_marginTop="8dp"/>
 
                 <RadioButton
                     android:id="@+id/BothRadioButton"
@@ -60,7 +61,8 @@
                     android:text="Both"
                     android:textColor="@color/radio_text_color"
                     android:textSize="16sp"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:layout_marginTop="8dp"/>
             </RadioGroup>
 
         </LinearLayout>
