--- a/app/src/main/res/layout/fragment_occupied_appointments.xml
+++ b/app/src/main/res/layout/fragment_occupied_appointments.xml
@@ -22,7 +22,7 @@
         android:id="@+id/titleAppointments"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Upcoming Appointments"
+        android:text="Upcoming Occupied Appointments"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/primary"
