--- a/app/src/main/res/layout/fragment_client_appointments.xml
+++ b/app/src/main/res/layout/fragment_client_appointments.xml
@@ -67,11 +67,16 @@
             android:id="@+id/greetingTextViewApp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="8dp"
             android:text="Hello, User!"
             android:textColor="@color/primary"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginEnd="8dp"
+            android:layout_gravity="center_vertical"/>
+
+
 
         <!-- Divider line -->
         <View
