--- a/app/src/main/res/layout/fragment_client_date_picker.xml
+++ b/app/src/main/res/layout/fragment_client_date_picker.xml
@@ -11,6 +11,20 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
+        <!-- App logo -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="left"
+            android:layout_marginBottom="10dp">
+            <ImageView
+                android:id="@+id/appLogo"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:contentDescription="App Logo"
+                android:src="@drawable/logo" />
+        </LinearLayout>
 
         <!-- Services Section -->
         <LinearLayout
