--- a/app/src/main/res/layout/fragment_client_set_appointment.xml
+++ b/app/src/main/res/layout/fragment_client_set_appointment.xml
@@ -13,7 +13,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/logo"
-        android:layout_gravity="center"
+        android:layout_gravity="left"
         android:contentDescription="App Logo"
         android:scaleType="fitCenter"
         android:layout_marginBottom="12dp" />
