--- a/app/src/main/res/layout/fragment_schedule_management.xml
+++ b/app/src/main/res/layout/fragment_schedule_management.xml
@@ -11,6 +11,20 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
+        <!-- App logo -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="left"
+            android:layout_marginBottom="10dp">
+            <ImageView
+                android:id="@+id/appLogo"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:contentDescription="App Logo"
+                android:src="@drawable/logo" />
+        </LinearLayout>
 
         <!-- Calendar in a CardView -->
         <androidx.cardview.widget.CardView
@@ -51,7 +65,7 @@
                 android:id="@+id/btnShowConstraints"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Show Constraints"
+                android:text="Edit Constraints"
                 android:textColor="@android:color/white"
                 android:backgroundTint="@color/secondary"
                 android:layout_marginBottom="12dp"
